--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
     <head>
         <title>Explore Manchester</title>
-        <link rel="shortcut icon" type="image/x-icon" href="assets/favicon.ico?">
+        <link rel="shortcut icon" type="image/x-icon" href="assets/favicon.ico">
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="style/style.css" rel="stylesheet">
