--- a/index.html
+++ b/index.html
@@ -25,5 +25,6 @@
         <img src='assets/city-skyline.jpg'>
         <figcaption>© Richard Heyes 2014 | Propertyable.co.uk</figcaption>
         </figure>
+    <author>&copy Reece Sharples 2024</author>
     </body>
 </html>
