--- a/page1.html
+++ b/page1.html
@@ -57,5 +57,6 @@
             is a form of motorbike racing where there is only one gear and no brakes. The Belle Vue Aces are a world-famous 
             club that have won the British league title many times over. They have world class riders in their team and have 
             world class facilities. If motor sport is for you, get yourself down there.</p>
+    <author>&copy Reece Sharples 2024</author>
     </body>
 </html>
