--- a/page2.html
+++ b/page2.html
@@ -55,5 +55,6 @@
         <p>Is a modern restaurant in the city centre that serves a wide range of food including pizza, chilli, a variety 
             of pasta dishes as well as starters such as garlic bread, meatballs etc. The place has a relaxing atmosphere 
             with not too much lighting and has good background music. It is a good restaurant worth going to.</p>
+    <author>&copy Reece Sharples 2024</author>
     </body>
 </html>
