--- a/page3.html
+++ b/page3.html
@@ -38,5 +38,6 @@
         <p>Selfridges is a popular designer outlet that sell the likes of Lacoste, Hugo Boss, Burberry among many 
             others. They have proven to be successful in tourist destinations such as Manchester. It also sells 
             household items such as kitchenware, home furniture and toiletries.</p>
+    <author>&copy Reece Sharples 2024</author>
     </body>
 </html>
