--- a/page4.html
+++ b/page4.html
@@ -22,5 +22,6 @@
         <p>Hi, my name is Reece Sharples working for Manchester Evening News. I have been tasked to 
             create a website about what there is to do in Manchester including sightseeing, where to eat 
             and nearby shops. You will be sure to have a great day out!
+    <author>&copy Reece Sharples 2024</author>
     </body>
 </html>
